# UVg

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  deny.toml
docs/: migration-output-layout.md  release.md  schema-evolution-contracts.md
scripts/: module_size_report.py
src/: apply_progress.rs  cli.rs  db.rs  db_tests.rs  dialect.rs  error.rs  main.rs  main_tests.rs  migrations.rs  migrations_tests.rs  naming.rs  output.rs  schema.rs  table_filter.rs  testutil.rs  typemap.rs
src/codegen/: ddl.rs  ddl_diff.rs  declarative.rs  imports.rs  mod.rs  relationships.rs  tables.rs
src/codegen/snapshots/: uvg__codegen__declarative__tests__declarative_generator_snapshot.snap  uvg__codegen__declarative__tests__declarative_no_pk_fallback_snapshot.snap  uvg__codegen__tables__tests__tables_generator_no_pk_snapshot.snap  uvg__codegen__tables__tests__tables_generator_snapshot.snap
src/ddl_typemap/: mod.rs  mssql.rs  mysql.rs  pg.rs  sqlite.rs
src/introspect/: columns.rs  constraints.rs  mod.rs  tests.rs
src/introspect/mysql/: columns.rs  constraints.rs  indexes.rs  tables.rs
src/introspect/pg/: constraints.rs  mod.rs
src/introspect/sqlite/: columns.rs  constraints.rs  indexes.rs
src/tui/: mod.rs  tests.rs
src/typemap/: mod.rs  mssql.rs  pg.rs
tests/: integration.rs
